2002-11-30	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed bug in PreferencePanel where transparency was
      not being stored.
      

2002-11-28	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed crash when closing window when a session program 
      had exited.
      

2002-11-28      fabian
    * Added Japanese (EUC-JP/SJIS) and Korean (EUC-KR) support

2002-11-27	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added menu item and keyboard shortcut to close the current 
      terminal session.